--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,57 @@ header {
     align-self: start;
 }
 
+.contacts {
+    grid-column-start: 4;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    justify-self: center;
+    align-self: end;
+}
+
+.rowPhone {
+    text-align: justify;
+    margin-bottom: 5px;
+}
+
+.rowPhone img {
+    height: 15px;
+}
+
+.rowPhone a {
+    text-decoration: none;
+    color: rgb(55, 50, 50);
+    font-weight: bold;
+    margin-left: 12px;
+    word-spacing: 2px;
+    font-size: 20px; 
+}
+
+.rowPhone a:hover {
+    color: #2eac93;  
+}
+
+.content {
+    background-color: bisque;
+    width: 1024px;
+    margin: 0 auto;
+}
+
+.summaryTitle {
+    margin-top: 10px;
+    width: 160px;
+}
+
+.summaryTitle h2 {
+    margin: 0;
+}
+
+.summaryText {
+    width: 600px;
+    text-align: center; 
+}
+
+.skillsText {
+    width: 600px;
+}
